--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,91 +1,53 @@
-.navbar-default {
-  border-color: transparent;
-  background-color: #222;
+.custom-navbar {
+  background-color: #000;
+  padding-top: 20px;
+  padding-bottom: 20px;
+  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
 
-.navbar-default .navbar-brand {
-  font-family: "Kaushan Script", "Helvetica Neue", Helvetica, Arial, cursive;
-  color: #1ee2e7;
-}
-
-.navbar-default .navbar-brand:hover,
-.navbar-default .navbar-brand:focus,
-.navbar-default .navbar-brand:active,
-.navbar-default .navbar-brand.active {
-  color: #fec503;
-}
-
-.navbar-default .navbar-collapse {
-  border-color: rgba(255, 255, 255, .02);
-}
-
-.navbar-default .navbar-toggle {
-  border-color: #1ee2e7;
-  background-color: #1ee2e7;
-}
-
-.navbar-default .navbar-toggle .icon-bar {
-  background-color: #fff;
-}
-
-.navbar-default .navbar-toggle:hover,
-.navbar-default .navbar-toggle:focus {
-  background-color: #1ee2e7;
-}
-
-.navbar-default .nav li a {
-  text-transform: uppercase;
-  font-family: Montserrat, "Helvetica Neue", Helvetica, Arial, sans-serif;
-  font-weight: 400;
+.custom-navbar .navbar-brand {
+  color: #fff;
+  font-weight: 700;
   letter-spacing: 1px;
+}
+
+.custom-navbar .nav-link {
   color: #fff;
+  text-transform: uppercase;
+  font-weight: 700;
+  letter-spacing: 1px;
+  padding: 0 1rem;
+  position: relative;
+  transition: color 0.3s;
 }
 
-.navbar-default .nav li a:hover,
-.navbar-default .nav li a:focus {
-  outline: 0;
-  color: #1ee2e7;
+.custom-navbar .nav-link:hover {
+  color: #18bc9c;
 }
 
-.navbar-default .navbar-nav > .active > a {
-  border-radius: 0;
-  color: #fff;
-  background-color: #1ee2e7;
+.custom-navbar .nav-link::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -5px;
+  left: 0;
+  background-color: #f0ad4e;
+  visibility: hidden;
+  transform: scaleX(0);
+  transition: all 0.3s ease-in-out 0s;
 }
 
-.navbar-default .navbar-nav > .active > a:hover,
-.navbar-default .navbar-nav > .active > a:focus {
-  color: #fff;
-  background-color: #17d0d5;
+.custom-navbar .nav-link:hover::before {
+  visibility: visible;
+  transform: scaleX(1);
 }
 
-@media (min-width: 768px) {
-  .navbar-default {
-    padding: 25px 0;
-    border: 0;
-    background-color: transparent;
-    -webkit-transition: padding .3s;
-    -moz-transition: padding .3s;
-    transition: padding .3s;
-  }
+.custom-navbar .navbar-toggler {
+  border: none;
+  padding-right: 0;
+}
 
-  .navbar-default .navbar-brand {
-    font-size: 2em;
-    -webkit-transition: all .3s;
-    -moz-transition: all .3s;
-    transition: all .3s;
-  }
-
-  .navbar-default .navbar-nav > .active > a {
-    border-radius: 3px;
-  }
-
-  .navbar-default.navbar-shrink {
-    padding: 10px 0;
-    background-color: #222;
-  }
-
-  .navbar-default.navbar-shrink .navbar-brand {
-    font-size: 1.5em;
-  }
+.custom-navbar .navbar-toggler-icon {
+  background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
 }
