--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -1,8 +1,8 @@
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@1;300&display=swap');
+
 .custom-navbar {
   background-color: #000;
-  padding-top: 20px;
-  padding-bottom: 20px;
-  font-family: "Montserrat", "Helvetica Neue", Helvetica, Arial, sans-serif;
+  font-family: "Lato", sans-serif;
 }
 
 .custom-navbar .navbar-brand {
@@ -22,15 +22,15 @@
 }
 
 .custom-navbar .nav-link:hover {
-  color: #18bc9c;
+  color: #f0ad4e;
 }
 
-.custom-navbar .nav-link::before {
+.custom-navbar .nav-link::after {
   content: "";
   position: absolute;
   width: 100%;
   height: 2px;
-  bottom: -5px;
+  bottom: 0;
   left: 0;
   background-color: #f0ad4e;
   visibility: hidden;
@@ -38,7 +38,7 @@
   transition: all 0.3s ease-in-out 0s;
 }
 
-.custom-navbar .nav-link:hover::before {
+.custom-navbar .nav-link:hover::after {
   visibility: visible;
   transform: scaleX(1);
 }
@@ -50,4 +50,11 @@
 
 .custom-navbar .navbar-toggler-icon {
   background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3e%3cpath stroke='rgba(255, 255, 255, 1)' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3e%3c/svg%3e");
+  margin-top: 0.15rem;
+}
+
+@media (max-width: 991.98px) {
+  .custom-navbar .nav-link::after {
+    display: none;
+  }
 }
