--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -1,19 +1,27 @@
 header {
   text-align: center;
-  color: #fff;
+  color: #bcb5b5;
   background-attachment: scroll;
-  background-image: url(https://unsplash.imgix.net/uploads%2F14115408840644deb16b0%2F2dc933e3?q=75&fm=jpg&auto=format&s=7f43646e4d26049c6c39890afb2e5ced);
+  background-image: url(../images/fondo.jpg);
   background-position: center center;
-  background-repeat: none;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
+  background-repeat: no-repeat;
   background-size: cover;
-  -o-background-size: cover;
+}
+
+header .container {
+  position: relative;
 }
 
 header .intro-text {
   padding-top: 100px;
   padding-bottom: 50px;
+}
+
+header .intro-text .background-window {
+  display: inline-block;
+  background-color: rgba(61, 66, 87, 0.741);
+  padding: 20px;
+  border-radius: 50px;
 }
 
 header .intro-text .intro-lead-in {
