--- a/src/components/styles/Navbar.css
+++ b/src/components/styles/Navbar.css
@@ -16,6 +16,7 @@
   font-weight: 700;
   letter-spacing: 1px;
   margin-left: 15px;
+  white-space: nowrap; /* Asegura que el texto no se ajuste */
 }
 
 .custom-navbar .nav {
@@ -155,13 +156,13 @@
   }
 
   .custom-navbar .nav-link {
-    border-top: 1px solid rgba(255, 255, 255, 0.2);
+    border-top: 1px solid rgba(235, 45, 45, 0.2);
     border-bottom: 1px solid rgba(255, 255, 255, 0.2);
     padding: 5px 0;
   }
 
   .custom-navbar .nav-link:first-child {
-    border-top: 2px solid rgba(255, 255, 255, 0.2);
-    width: 120%;
+    border-top: 2px solid rgba(94, 76, 76, 0.2);
+    width: auto;
   }
 }
