--- a/src/components/styles/Portfolio.css
+++ b/src/components/styles/Portfolio.css
@@ -22,8 +22,6 @@
   height: 100%;
   opacity: 0;
   background: #1ee2e7;
-  -webkit-transition: all ease .5s;
-  -moz-transition: all ease .5s;
   transition: all ease .5s;
 }
 
@@ -80,3 +78,14 @@
     margin: 0 0 30px;
   }
 }
+
+.modal-img-container {
+  text-align: center;
+}
+
+.modal-img {
+  max-width: 100%;
+  height: auto;
+  margin-bottom: 1rem;
+}
+
