--- a/src/components/styles/Contact.css
+++ b/src/components/styles/Contact.css
@@ -15,22 +15,31 @@
   margin-bottom: 30px;
 }
 
-.contact-section .contact-btn {
-  background-color: #4CAF50;
-  border: none;
-  color: white;
-  padding: 15px 32px;
-  text-align: center;
-  text-decoration: none;
+.linkedin-icon {
   display: inline-block;
-  font-size: 16px;
-  margin: 4px 2px;
-  cursor: pointer;
-  border-radius: 5px;
-  transition-duration: 0.4s;
+  transition: transform 0.3s;
 }
 
-.contact-section .contact-btn:hover {
-  background-color: #45a049;
-  color: white;
+.linkedin-icon:hover {
+  transform: scale(1.2);
+}
+
+.linkedin-icon:hover .icon-tabler-brand-linkedin {
+  stroke: #0077B5;
+}
+
+.linkedin-icon:hover .icon-tabler-brand-facebook {
+  stroke: #1877F2;
+}
+
+.linkedin-icon:hover .icon-tabler-brand-instagram {
+  stroke: #C13584;
+}
+
+.linkedin-icon:hover .icon-tabler-brand-telegram {
+  stroke: #006dcc;
+}
+
+.linkedin-icon:hover .icon-tabler-mail {
+  stroke: #ffffffe0;
 }
