--- a/src/components/styles/Header.css
+++ b/src/components/styles/Header.css
@@ -20,25 +20,32 @@ header .intro-text {
 header .intro-text .background-window {
   display: inline-block;
   background-color: rgba(61, 66, 87, 0.741);
-  padding: 20px;
-  border-radius: 50px;
+  padding: 40px;
+  border-radius: 10px;
 }
 
 header .intro-text .intro-lead-in {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 22px;
+  font-size: 28px;
   font-style: italic;
-  line-height: 22px;
+  line-height: 32px;
 }
 
 header .intro-text .intro-heading {
-  margin-bottom: 25px;
+  margin-bottom: 15px;
   text-transform: uppercase;
   font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-  font-size: 50px;
+  font-size: 40px;
   font-weight: 700;
-  line-height: 50px;
+  line-height: 45px;
+}
+
+header .intro-text .contact-text {
+  font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+  font-size: 22px; /* Tamaño de fuente aumentado */
+  font-style: italic;
+  line-height: 28px;
 }
 
 @media(min-width:768px) {
@@ -52,15 +59,22 @@ header .intro-text .intro-heading {
     font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
     font-size: 40px;
     font-style: italic;
-    line-height: 40px;
+    line-height: 45px;
   }
 
   header .intro-text .intro-heading {
-    margin-bottom: 50px;
+    margin-bottom: 25px;
     text-transform: uppercase;
     font-family: Montserrat,"Helvetica Neue",Helvetica,Arial,sans-serif;
-    font-size: 75px;
+    font-size: 60px;
     font-weight: 700;
-    line-height: 75px;
+    line-height: 65px;
+  }
+
+  header .intro-text .contact-text {
+    font-family: "Droid Serif","Helvetica Neue",Helvetica,Arial,sans-serif;
+    font-size: 24px; /* Tamaño de fuente aumentado */
+    font-style: italic;
+    line-height: 30px;
   }
 }
